# lump-lofar-und-mpifr-pulsare

./: AUTHORS  COPYING  ChangeLog  Makefile  NEWS  ProjectHome.md  THANKS  make_setup.py
lump/src/lump/: .dependencies.mk  Basic_LuMP_Power0_Recorder.py  Basic_LuMP_Recorder.py  JMA_code.h  LOFAR_Station_Beamformed_Info_0001.cxx  LOFAR_Station_Beamformed_Info_0002.cxx  LOFAR_Station_Beamformed_Info_0002.h  LOFAR_Station_Beamformed_LuMP1_Expander.cxx  LOFAR_Station_Beamformed_Packet.cxx  LOFAR_Station_Beamformed_Packet.h  LOFAR_Station_Beamformed_Recorder.py  LOFAR_Station_Beamformed_VDIF_Packet_LOFAR0.cxx  LOFAR_Station_Beamformed_VDIF_Packet_LOFAR0.h  LOFAR_Station_Beamformed_Valid.cxx  LOFAR_Station_Beamformed_Valid.h  LOFAR_Station_Beamformed_Valid_Real32.cxx  LOFAR_Station_Beamformed_Writer_Base.h  LOFAR_Station_Beamformed_Writer_LuMP0.cxx  LOFAR_Station_Beamformed_Writer_LuMP0.h  LOFAR_Station_Beamformed_Writer_LuMP2.cxx  LOFAR_Station_Beamformed_Writer_PFB0.cxx  LOFAR_Station_Beamformed_Writer_PFB0.h  LOFAR_Station_Beamformed_Writer_PFB1.cxx  LOFAR_Station_Beamformed_Writer_PFB1.h  LOFAR_Station_Beamformed_Writer_P_PFB0.cxx  LOFAR_Station_Beamformed_Writer_P_PFB1.cxx  LOFAR_Station_Beamformed_Writer_P_PFB1.h  LOFAR_Station_Beamformed_Writer_Power0.h  LOFAR_Station_Beamformed_Writer_Raw.cxx  LOFAR_Station_Beamformed_Writer_Raw0.h  LOFAR_Station_Beamformed_Writer_Raw1.cxx  LOFAR_Station_Beamformed_Writer_Signals.cxx  LOFAR_Station_Beamformed_Writer_Signals.h  LOFAR_Station_Common.cxx  LOFAR_Station_Common.h  LOFAR_Station_Swap.h  LuMP_Computer_Information.py  (+16 more)
(+116 files in other folders)
